2000-03-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (GetWindowSizeHints):
	suppress broken size hints warning with zero size increment and
	identical max and min values

	* fvwm/events.c (HandleEnterNotify):
	(HandleLeaveNotify):
	* fvwm/move_resize.c (InteractiveMove):
	(resize_window):
	* fvwm/screen.h (ScreenInfo):
	Ignore LeaveNotify and EnterNotify events while the wire frame is
	visible.  This may have unwanted effects on the window list; perhaps
	only if the mouse is not grabbed on the window, e.g. if the motion was
	invoked via a key.

2000-03-08  olicha	<olivier.chapuis@free.fr>

	* AUTHORS: update my entries for my ego :)

2000-02-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (CreateIconWindow):
	(RedoIconName):
	(Iconify):
	fixed NoIconTItle core dump

2000-02-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* ChangeLog:
	removed trash entries

	* configure.in:
	fixed version number broken by release building script tests

2000-02-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in: changed version to 2.3.16

	* fvwm/style.c (simplify_style_list):
	(add_style_to_list):
	(ProcessDestroyStyle):
	* fvwm/screen.h:
	* fvwm/events.c (HandleEvents):
	* fvwm/screen.h (ScreenInfo):
	speed up style merging by waiting until fvwm has nothing else to do
	before simplifying the style list

	* fvwm/conditional.c (MatchesConditionMask):
	* fvwm/style.c (blockcmpmask):
	renamed cmp_maked_flags to blockcmpmask

	* fvwm/fvwm2.1:
	added missing description of gotodeskandpage command
	removed references to obsolete Desk command; use GotoDesk instead

	* fvwm/virtual.c (GetDeskNumber):
	(gotoDeskAndPage_func):
	(changeDesks):
	gotodesk, gotodeskandpage and movetodesk accept 'prev' to indicate last
	desk.

2000-02-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (simplify_style_list):
	fixed style merging

2000-02-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in: changed version to 2.3.15

	* fvwm/style.c (add_style_to_list):